fix(styles): hide overflow on model-overview to avoid flashing scrollbars

--- a/src/components/specific/models/models-overview/ModelsOverview.scss
+++ b/src/components/specific/models/models-overview/ModelsOverview.scss
@@ -1,9 +1,13 @@
 .models-overview {
-  &.bimdata-card:deep() > .bimdata-card__content {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    height: calc(100% - 37px);
-    padding: $spacing-unit * 2;
+  &.bimdata-card {
+    overflow: hidden;
+
+    &:deep() > .bimdata-card__content {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      height: calc(100% - 37px);
+      padding: $spacing-unit * 2;
+    }
   }
 }
